weewx change history
--------------------

2.X.Y 09/ZZ/13

WMR100 and Vantage drivers now emit a null wind direction when the wind
speed is zero.

The LOOP value for daily ET on Vantages was too high by a factor of 10. 
This has been corrected.

Ported to Korora 19 (Fedora 19). Thanks to user zmodemguru!

Plots under 16 hours in length, now use 1 hour increments (instead of 
3 hours).

Fixed rain units in ws28xx driver.


2.4.0 08/03/13

The configuration utility wee_config_vantage now allows you to set
DST to 'auto', 'off', or 'on'. It also lets you set either a time
zone code, or a time zone offset.

The service StdTimeSync now catches startup events and syncs the clock
on them. It has now been moved to the beginning of the list
"service_list" in weewx.conf. Users may want to do the same with their
old configuration file.

A new event, END_ARCHIVE_PERIOD has been added, signaling the end of
the archive period.

The LOOP packets emitted by the driver for the Davis Vantage series
now includes the max wind gust and direction seen since the beginning
of the current archive period.

Changed the null value from zero (which the Davis documentation specifies)
to 0x7fff for the VP2 type 'highRadiation'.

Archive record packets with date and time equal to zero or 0xff now
terminate dumps.

The code that picks a filename for "summary by" reports has now been
factored out into a separate function (getSummaryByFileName). This
allows the logic to be changed by subclassing.

Fixed a bug that did not allow plots with aggregations less than 60 minutes
across a DST boundary.

Fixed bug in the WMR100 driver that prevented UV indexes from being 
reported.

The driver for the LaCrosse WS-28XX weather series continues to evolve and
mature. However, you should still consider it experimental.


2.3.3 06/21/13

The option week_start now works.

Updated WMR200 driver from Chris Manton.

Fixed bug that prevented queries from being run against a MySQL database.


2.3.2 06/16/13
