@@ -1761,6 +1761,62 @@ outTemp = Outside Temperature</p>
       <p class="config_option">generator_list </p>
       <p>This option controls which generators get run for this skin. It is a comma 
 	separated list. The generators will be run in this order. </p>
+	<h1 id="Customizing your locale">Customizing your locale</h1>
+	<p>Weewx has been designed to make localization fairly straightforward. Here 
+	are the steps you will need to take in order to localize to a non-English 
+	language and/or locale.</p>
+		<h2>Translate the templates</h2>
+		<p>First, you will need to go through the templates and translate to 
+		your target language. Obvious text strings such as "Current Weather 
+		Conditions" will need to be translated.</p>
+		<h2>Modify skin.conf to reflect local conventions</h2>
+		<p>Next, you will need to go through <span class="code">skin.conf</span> 
+		and modify options to follow local conventions. This includes dates and 
+		labels.</p>
+		<h3>Dates</h3>
+		<p>Date formats may need to be changed. For example, if you wish to 
+		follow the European convention Day/Month/Year, rather than the US 
+		convention of Month/Day/Year, then lines such as</p>
+		<p class="tty">bottom_label_format = %m/%d/%y</p>
+		<p>need to be changed to</p>
+		<p class="tty">bottom_label_format = %d/%m/%y</p>
+		<p>There are several other, similar, date formats.</p>
+		<h3>Labels</h3>
+		<p>There are several almanac labels that may need to be changed. These 
+		include:</p>
+		<p class="tty">hemisphere = N, S, E, W</p>
+		<p>and</p>
+		<p class="tty">moon_phases = New, Waxing crescent, First quarter, Waxing 
+		gibbous, Full, Waning gibbous, Last quarter, Waning crescent</p>
+		<p>You will also have to change the generic labels given to your weather 
+		observations:</p>
+		<pre class="tty">         barometer      = Barometer
+        dewpoint       = Dew Point
+        heatindex      = Heat Index
+        inHumidity     = Inside Humidity
+        inTemp         = Inside Temperature
+        outHumidity    = Outside Humidity
+        outTemp        = Outside Temperature
+        radiation      = Radiation
+        rain           = Rain
+        rainRate       = Rain Rate
+        rxCheckPercent = ISS Signal Quality
+        windDir        = Wind Direction
+        windGust       = Gust Speed
+        windGustDir    = Gust Direction
+        windSpeed      = Wind Speed
+        windchill      = Wind Chill
+        windgustvec    = Gust Vector
+        windvec        = Wind Vector
+        extraTemp1     = Pond Temperature</pre>
+		<h2>Environment variable <span class="code">LANG</span></h2>
+		<p>Finally, you will need to set the environment variable
+		<span class="code">LANG</span> to reflect your locale. For example, 
+		assuming you set</p>
+		<p class="tty">$ export LANG=es_ES.UTF-8</p>
+		<p>before running <span class="code">weewx</span>, then the local 
+		Spanish names for days of the week and months of the year will be used. 
+		The decimal point for numbers will also be modified appropriately.</p>
       <h1 id="Customizing_the_weewx_service_engine">Customizing the
 	<span class="code">weewx</span> service engine</h1>
       <p>This is an advance topic intended for those who wish to try their hand at 
